--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -2,7 +2,7 @@ name: android_build
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # 每6小时执行一次
+    - cron: '0 0 * * *'  # 每6小时执行一次
   workflow_dispatch:
 
 jobs:
